--- a/platform-theme/src/main/res/values/dimens.xml
+++ b/platform-theme/src/main/res/values/dimens.xml
@@ -1,3 +1,9 @@
 <resources>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_16">16dp</dimen>
+
+    <dimen name="sp_12">12sp</dimen>
+    <dimen name="sp_14">14sp</dimen>
+    <dimen name="sp_16">16sp</dimen>
 </resources>
